--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@
                 <div id="team-desc">We have an amazing leadership team made of a talented group of retail professionals with a breadth of knowledge and experience. Not only are they committed to moving the business forward, but are also committed to investing in our talent and growth. Our senior team believes in leading by example and fostering a positive work environment and opportunities for our employees to be engaged and challenged every day!</div>
                 <div id="team-pics">
                     <div class="team-member">
-                        <img id ="thomas" src="/images/thomas.jpg" />
+                        <img id ="thomas" src="images/thomas.jpg" />
                         <h5>Thomas Heig</h5>
                     </div>
                     <div id="thomas-popup"></div>
                     <div class="team-member">
-                        <img src="/images/paul.jpg" />
+                        <img src="images/paul.jpg" />
                         <h5>Paul Wood</h5>
                     </div>
                     <div class="team-member">
-                        <img src="/images/dave.jpg" />
+                        <img src="images/dave.jpg" />
                         <h5>Dave Burnside</h5>
                     </div>
                     <div class="team-member">
-                        <img src="/images/curtis.jpg" />
+                        <img src="images/curtis.jpg" />
                         <h5>Curtis Olson</h5>
                     </div>
                     <div class="team-member">
-                        <img src="/images/julia.jpg" />
+                        <img src="images/julia.jpg" />
                         <h5>Julia Knox</h5>
                     </div>
                     <div class="team-member">
@@ -77,11 +77,11 @@
                         <h5>Roy Hynson</h5>
                     </div>
                     <div class="team-member">
-                        <img src="/images/jeff.jpg" />
+                        <img src="images/jeff.jpg" />
                         <h5>Jeff Scoobie</h5>
                     </div>
                     <div class="team-member">
-                        <img src="/images/jessica.jpg" />
+                        <img src="images/jessica.jpg" />
                         <h5>Jessica Godin</h5>
                     </div>
                     <div class="team-member">
@@ -115,9 +115,9 @@
             </div>
             <div id="awards">
                 <h3>WE'RE PROUD TO BE AWARDED</h3>
-                <img src="/images/eca.jpg" />
-                <img src="/images/bobs.jpg" />
-                <img src="/images/rcc.png" />
+                <img src="images/eca.jpg" />
+                <img src="images/bobs.jpg" />
+                <img src="images/rcc.png" />
             </div>
         </div>
         <footer>
