--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="js/gianttiger.js" type="text/javascript"></script>
 		
-        <link rel="stylesheet" type="text/css" href="styles/gianttiger.css" />
+        <link rel="stylesheet" type="text/css" href="style/gianttiger.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     </head>
     <body>
